# oai

./: .env_local  .gitignore  .pdm-python  CLAUDE.md  Taskfile.yml  auth.py  main.py  pipeline_example.yaml  pyproject.toml  requirements.txt  testme.py
.claude/: settings.json
api/: schemas.py  v1.py
engine/: apiclient.py  model_picker.py  taskmaster.py  waiter.py
engine/pipelines/: exec.py  models.py  query_send.py  scripting.py
storage/: pipelines.py
